# conclave

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LICENSE-APACHE  LICENSE-MIT  PLAN.md  PROMPTING  PROMPTING.md  README.md  RUNNING.md  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
apps/: .gitignore
apps/desktop/: before-bundle.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: generate-app-icons.mjs
apps/desktop/src/: App.tsx  i18n.ts  index.css  main.tsx  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: batch.rs  commands.rs  lib.rs  main.rs  path_fix.rs  state.rs
apps/desktop/src/components/: Button.tsx  Card.tsx  Combobox.tsx  Field.tsx  Logo.tsx  MdSuffix.tsx  Onboarding.tsx  Popover.tsx  ProviderStatusPill.tsx  Sheet.tsx  Sidebar.tsx
apps/desktop/src/constants/: specialties.ts
apps/desktop/src/lib/: cn.test.ts  ipc.ts  providerStatus.ts  providers.test.ts  providers.ts  theme.ts
apps/desktop/src/locales/: en.json  es.json
apps/desktop/src/pdf/: CaseVerdictPDF.tsx  PdfOptionsSheet.tsx  exportCaseVerdict.tsx  exportCasesBatch.tsx  exportOptions.test.ts  exportOptions.ts  filename.test.ts  filename.ts
apps/desktop/src/routes/: Cases.tsx  Knowledge.tsx  Settings.tsx  Workspaces.tsx
apps/desktop/src/routes/cases/: ClassifyDropDialog.tsx  CollapsibleSection.tsx  DeliberationOverlay.tsx  NewCase.tsx  ProviderField.tsx  ShowCase.tsx  VerdictRenderer.tsx  banners.tsx  dialogs.tsx  helpers.test.ts  helpers.ts  useBatchProgress.test.ts  useBatchProgress.ts  verdictParsing.ts
apps/web/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/scripts/: generate-favicons.mjs
apps/web/src/app/: layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/app/[locale]/disclaimer/: page.tsx
apps/web/src/app/[locale]/privacy/: page.tsx
apps/web/src/app/[locale]/terms/: page.tsx
apps/web/src/components/: DeliberationDiagram.tsx  DownloadButton.tsx  DownloadSection.tsx  FAQ.tsx  FeatureGrid.tsx  Footer.tsx  Header.tsx  Hero.tsx  HeroMockup.tsx  LanguageToggle.tsx  Logo.tsx  PlatformLinks.tsx  PrivacySection.tsx  ProvidersSection.tsx  Reveal.tsx  SectionEyebrow.tsx  ThemeToggle.tsx
apps/web/src/i18n/messages/: en.json  es.json
apps/web/src/lib/: downloads.ts  site.ts  theme.ts
apps/web/src/styles/: globals.css
crates/cli/: Cargo.toml
crates/cli/src/: embedder.rs  main.rs
crates/cli/src/commands/: audit.rs  case.rs  deident.rs  documents.rs  eval.rs  evidence.rs  export.rs  feedback.rs  ingest.rs  mod.rs  providers.rs  search.rs  skills.rs  stats.rs  verdict.rs  workspace.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  logging.rs  paths.rs  workspace.rs
crates/deident/: Cargo.toml
crates/deident/src/: lib.rs  patterns.rs
crates/evidence/: Cargo.toml
crates/evidence/src/: cache.rs  europe_pmc.rs  lib.rs  pubmed.rs
crates/providers/: Cargo.toml  build.rs
crates/providers/examples/: openai_oauth_debug.rs
crates/providers/src/: anthropic_api.rs  anthropic_oauth.rs  apple_intelligence.rs  claude_cli.rs  cli_local.rs  codex_cli.rs  error.rs  lib.rs  mock.rs  oauth_flow.rs  ollama_local.rs  openai_api.rs  openai_oauth.rs  openrouter_api.rs  registry.rs  secrets.rs  types.rs
crates/providers/swift/: AppleIntelligenceBridge.swift
crates/rag/: Cargo.toml
crates/rag/examples/: extract_one.rs
crates/rag/src/: chunk.rs  chunking.rs  embed.rs  ingest.rs  lib.rs  pipeline.rs  search.rs  store.rs
crates/rag/src/embeddings/: fastembed_backend.rs  mod.rs
crates/rag/src/extract/: clean.rs  docx.rs  html.rs  image.rs  mod.rs  ocr.rs  pdf.rs  text.rs
crates/rag/src/loaders/: docx.rs  html.rs  markdown.rs  mod.rs  pdf.rs
crates/rag/src/store/: metadata.rs  mod.rs  repository.rs  vector.rs
crates/rag/tests/: ingest_search.rs
crates/rag/tests/fixtures/: sample.html  sample.md  sample.txt
crates/verdict/: Cargo.toml
crates/verdict/examples/: deliberation_live.rs  ingest_repro.rs
crates/verdict/src/: attachments.rs  clinical_services.rs  connectors.rs  deliberation.rs  eval.rs  lib.rs  persistence.rs  pipeline.rs  priors.rs  privacy.rs  prompt.rs  qa.rs  schema.rs  skills.rs  validation.rs  workflows.rs
crates/verdict/src/priors/: colorectal.md
crates/verdict/tests/fixtures/: golden_case_es.json  golden_case_evidence.json  golden_case_multibyte.json
eval/: README.md  synthetic.json
plans/: 001-phi-attachment-retention-honesty.md  002-panic-net-single-case-commands.md  003-secret-files-and-log-hygiene.md  004-consolidate-keychainless-provider-list.md  005-frontend-test-baseline.md  006-docs-truth-up-and-claude-md.md  012-clinical-reasoning-quality.md  README.md
promo/twitter/: README.md
promo/twitter/es/: README.md
promo/twitter/src/: 01-hero.html  02-deliberation.html  03-privacy.html  04-providers.html  05-grounded.html  _app.html  _screen.html  build.py  es-01-hero.html  es-02-captura.html  es-03-deliberacion.html  es-04-privacidad.html  es-05-motores.html  es-06-multidispositivo.html  es-07-cuadrado.html  es-08-contraste.html  es-09-cita.html  es-header.html  header.html  style.css
prompts/: phase-0-foundations.md  phase-1-knowledge-base.md  phase-2-providers.md
scripts/: verify.sh
