[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/providers",
    "crates/rag",
    "crates/deident",
    "crates/verdict",
    "crates/evidence",
    "crates/cli",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Xus Badia"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xusbadia/conclave"
homepage = "https://github.com/xusbadia/conclave"
readme = "README.md"

[workspace.dependencies]
# Internal crates
conclave-core = { path = "crates/core", version = "0.1.0" }
conclave-providers = { path = "crates/providers", version = "0.1.0" }
conclave-rag = { path = "crates/rag", version = "0.1.0" }
conclave-deident = { path = "crates/deident", version = "0.1.0" }
conclave-verdict = { path = "crates/verdict", version = "0.1.0" }
conclave-evidence = { path = "crates/evidence", version = "0.1.0" }

# Errors
thiserror = "1"
anyhow = "1"

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
async-trait = "0.1"
futures = "0.3"

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Filesystem / paths
directories = "5"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Time / hashing / slugs / progress
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
sha2 = "0.11"
slug = "0.1"
indicatif = "0.18"

# Text processing
regex = "1"
unicode-segmentation = "1"

# Phase 1 — document extraction
pdf-extract = "0.10"
# `lopdf` defaults pull in chrono+jiff+rayon+time; we only need text extraction.
lopdf = { version = "0.40", default-features = false }
# `docx-rs` defaults pull in `image`; we only read text.
docx-rs = { version = "0.4", default-features = false }
html2text = "0.17"

# HTTP + secrets (Phase 2 — provider layer)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
keyring = "3"
rpassword = "7"
url = "2"

# Phase 2.5 OAuth in-app flow
base64 = "0.22"
rand = "0.8"
open = "5"

# Phase 4 — verdict engine
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Phase 1 — tokenisation, embeddings, vector + metadata stores
tiktoken-rs = "0.11"
# `fastembed` defaults drag in native-tls (needs OpenSSL on Windows) and the
# image-embedding pipeline. Pin rustls-only TLS and skip image models.
fastembed = { version = "5", default-features = false, features = [
    "ort-download-binaries-rustls-tls",
    "hf-hub-rustls-tls",
] }
# `lancedb` defaults pull AWS/GCS/Azure/DynamoDB/OSS object-store SDKs;
# we only need local-filesystem mode.
lancedb = { version = "0.29", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
# Arrow types for talking to lancedb. Pin the major version that lancedb
# 0.29 uses internally so they share Rc'd type definitions.
arrow-array = "58"
arrow-schema = "58"

# Phase 1 — OCR (feature-gated in `conclave-rag`)
pdfium-render = "0.9"
tesseract-rs = "0.2"

# Testing
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "allow"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Pragmatic relaxations for an early-stage codebase.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
return_self_not_must_use = "allow"
# `redundant_pub_crate` (nursery) directly conflicts with the rust-level
# `unreachable_pub` lint we use for crate-internal items; pick one.
redundant_pub_crate = "allow"
# Phase-0 subcommand stubs accept owned arg structs and return `Result<()>` so
# the surface stays stable once real implementations land in later phases.
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
# False-positive-prone on small string builders.
branches_sharing_code = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
