[package]
name = "conclave-cli"
description = "Command-line entry point for the Conclave virtual clinical committee."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lints]
workspace = true

[features]
# End-user binaries default to the real fastembed-backed embedder. Drop the
# default features in CI sandboxes that cannot reach the ONNX Runtime
# download endpoint (or rely on `embedding_model = "mock"` in the config).
default = ["fastembed-backend"]
fastembed-backend = ["conclave-rag/fastembed-backend"]

[[bin]]
name = "conclave-cli"
path = "src/main.rs"

[dependencies]
conclave-core = { workspace = true }
conclave-providers = { workspace = true }
conclave-rag = { workspace = true }
conclave-deident = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
