[package]
name = "conclave-cli"
description = "Command-line entry point for the Conclave virtual clinical committee."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lints]
workspace = true

[[bin]]
name = "conclave-cli"
path = "src/main.rs"

[dependencies]
conclave-core = { workspace = true }
conclave-providers = { workspace = true }
conclave-rag = { workspace = true }
conclave-deident = { workspace = true }
conclave-verdict = { workspace = true }
conclave-evidence = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
