[package]
name = "conclave-providers"
description = "LLM provider abstraction used by the Conclave virtual committee."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
conclave-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# HTTP client used by every cloud provider implementation.
reqwest = { workspace = true }
# OS-native secret storage (Keychain on macOS, Credential Manager on
# Windows, libsecret on Linux).
keyring = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
tokio = { workspace = true }
