[package]
name = "conclave-providers"
description = "LLM provider abstraction used by the Conclave virtual committee."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
# Compiles the Apple Intelligence Swift bridge on macOS hosts; no-op
# elsewhere. See build.rs for details.
build = "build.rs"

[lints]
workspace = true

[dependencies]
conclave-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# HTTP client used by every cloud provider implementation.
reqwest = { workspace = true }
# OS-native secret storage (Keychain on macOS, Credential Manager on
# Windows, libsecret on Linux).
keyring = { workspace = true }

# In-app OAuth flow (Phase 2.5) — PKCE generator + localhost listener +
# browser opener for the Claude Max / ChatGPT subscription providers.
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
# `process` feature added on top of the workspace's tokio so the local
# CLI providers (claude-cli, codex-cli) can shell out via
# `tokio::process::Command`.
tokio = { workspace = true, features = ["process"] }

# Local CLI providers (claude-cli, codex-cli) — resolve `claude` and
# `codex` binaries in `$PATH` and run them in a scratch working
# directory to keep CLAUDE.md / AGENTS.md from leaking into prompts.
which = "7"
tempfile = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
