[package]
name = "conclave-rag"
description = "Retrieval-Augmented Generation pipeline (ingestion, chunking, embeddings, search)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
conclave-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Document extraction (Phase 1 §1)
pdf-extract = { workspace = true }
lopdf = { workspace = true }
docx-rs = { workspace = true }
html2text = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
