[package]
name = "conclave-rag"
description = "Retrieval-Augmented Generation pipeline (ingestion, chunking, embeddings, search)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
conclave-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Document extraction (Phase 1 §1)
pdf-extract = { workspace = true }
lopdf = { workspace = true }
docx-rs = { workspace = true }
html2text = { workspace = true }

# Chunking (Phase 1 §3): regex-driven sentence splitter + tiktoken sizing.
regex = { workspace = true }
tiktoken-rs = { workspace = true }

# Embeddings (Phase 1 §4): fastembed wraps ONNX Runtime + HuggingFace Hub.
fastembed = { workspace = true }

# OCR backends (Phase 1 §2). Activated by the `ocr` feature below. They
# pull in heavy native dependencies (Pdfium, libtesseract), so we keep
# them strictly opt-in.
pdfium-render = { workspace = true, optional = true }
tesseract-rs = { workspace = true, optional = true }

[features]
default = []
ocr = ["dep:pdfium-render", "dep:tesseract-rs"]
# Exposes `MockEmbedder` so downstream crates (notably the CLI integration
# test) can pin a deterministic embedder without touching the network.
test-utils = []

[dev-dependencies]
tempfile = { workspace = true }
